logs/pytopo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytopo'...
Compiling './lib/python3.5/site-packages/pytopo/DownloadTileQueue.py'...
***   File "./lib/python3.5/site-packages/pytopo/DownloadTileQueue.py", line 83
    print "Downloading", url
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/GenericMapCollection.py'...
***   File "./lib/python3.5/site-packages/pytopo/GenericMapCollection.py", line 66
    print "Generic get_maplet", longitude, latitude, "->", filename
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/MapCollection.py'...
***   File "./lib/python3.5/site-packages/pytopo/MapCollection.py", line 108
    print "Single point! Zooming to maxzoom", self.maxzoom
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/MapViewer.py'...
***   File "./lib/python3.5/site-packages/pytopo/MapViewer.py", line 61
    print "pytopo", MapViewer.get_version()
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytopo/MapWindow.py'...
***   File "./lib/python3.5/site-packages/pytopo/MapWindow.py", line 174
    print "No collection!"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/OSMMapCollection.py'...
***   File "./lib/python3.5/site-packages/pytopo/OSMMapCollection.py", line 135
    print "Can't zoom past level", self.maxzoom, "in", \
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/TiledMapCollection.py'...
***   File "./lib/python3.5/site-packages/pytopo/TiledMapCollection.py", line 49
    print "Will re-download all map tiles"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/TopoMapCollection.py'...
***   File "./lib/python3.5/site-packages/pytopo/TopoMapCollection.py", line 59
    print "set series to", self.series
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/TrackPoints.py'...
***   File "./lib/python3.5/site-packages/pytopo/TrackPoints.py", line 152
    print "Reading track file", filename
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytopo/trackstats.py'...
***   File "./lib/python3.5/site-packages/pytopo/trackstats.py", line 177
    print "pylab isn't installed; will print stats only, no plotting"
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
